# Parallel-computing-course-projects

./: .cproject  .project  CMakeLists.txt
Problem Sets/Problem Set 1/: student_func.cu
Problem Sets/Problem Set 2/: student_func.cu
